v1.1.0/modules/schema/pages/class/FieldSafetySupervisor.adoc
= `FieldSafetySupervisor`
:toclevels: 4


+++Crew member on work site responsible for all local safety measures for the work crew doing maintenance, construction and repair in a substation or on a power line/cable.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FieldSafetySupervisor`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PersonRole.adoc[`PersonRole`]
*** xref::class/OperationPersonRole.adoc[`OperationPersonRole`]
**** xref::class/CrewMember.adoc[`CrewMember`]
***** *`FieldSafetySupervisor`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<IssuedSafetyDocuments,`IssuedSafetyDocuments`>>
//| [[slots_table.IssuedSafetyDocuments]]<<IssuedSafetyDocuments,`IssuedSafetyDocuments`>>
| 0..* +
xref::class/SafetyDocument.adoc[`SafetyDocument`]
| +++All safety documents issued to this supervisor.+++
| _n/a_

| <<ReleasedSafetyDocuments,`ReleasedSafetyDocuments`>>
//| [[slots_table.ReleasedSafetyDocuments]]<<ReleasedSafetyDocuments,`ReleasedSafetyDocuments`>>
| 0..* +
xref::class/SafetyDocument.adoc[`SafetyDocument`]
| +++All safety documents released by this supervisor.+++
| _n/a_

| <<Crew,`Crew`>>
//| [[slots_table.Crew]]<<Crew,`Crew`>>
| 0..1 +
xref::class/Crew.adoc[`Crew`]
| +++Crew to which this crew member belongs.+++
| xref::class/CrewMember.adoc[`CrewMember`]

| <<Appointments,`Appointments`>>
//| [[slots_table.Appointments]]<<Appointments,`Appointments`>>
| 0..* +
xref::class/Appointment.adoc[`Appointment`]
| +++All appointments for this person.+++
| xref::class/PersonRole.adoc[`PersonRole`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this person role.+++
| xref::class/PersonRole.adoc[`PersonRole`]

| <<Person,`Person`>>
//| [[slots_table.Person]]<<Person,`Person`>>
| 0..1 +
xref::class/Person.adoc[`Person`]
| +++Person having this role.+++
| xref::class/PersonRole.adoc[`PersonRole`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Appointments]
=== `Appointments`
+++All appointments for this person.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PersonRole.Appointments`
| Cardinality
| 0..*
| Type
| xref::class/Appointment.adoc[`Appointment`]

| Inherited from
| xref::class/PersonRole.adoc[`PersonRole`]


|===

////
[.text-left]
--
<<slots_table.Appointments,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this person role.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PersonRole.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PersonRole.adoc[`PersonRole`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#Crew]
=== `Crew`
+++Crew to which this crew member belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CrewMember.Crew`
| Cardinality
| 0..1
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/CrewMember.adoc[`CrewMember`]


|===

////
[.text-left]
--
<<slots_table.Crew,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#IssuedSafetyDocuments]
=== `IssuedSafetyDocuments`
+++All safety documents issued to this supervisor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FieldSafetySupervisor.IssuedSafetyDocuments`
| Cardinality
| 0..*
| Type
| xref::class/SafetyDocument.adoc[`SafetyDocument`]


|===

////
[.text-left]
--
<<slots_table.IssuedSafetyDocuments,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#Person]
=== `Person`
+++Person having this role.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PersonRole.Person`
| Cardinality
| 0..1
| Type
| xref::class/Person.adoc[`Person`]

| Inherited from
| xref::class/PersonRole.adoc[`PersonRole`]


|===

////
[.text-left]
--
<<slots_table.Person,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ReleasedSafetyDocuments]
=== `ReleasedSafetyDocuments`
+++All safety documents released by this supervisor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FieldSafetySupervisor.ReleasedSafetyDocuments`
| Cardinality
| 0..*
| Type
| xref::class/SafetyDocument.adoc[`SafetyDocument`]


|===

////
[.text-left]
--
<<slots_table.ReleasedSafetyDocuments,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/SafetyDocument.adoc[`SafetyDocument`] | xref::class/SafetyDocument.adoc#ReleasedBySupervisor[`ReleasedBySupervisor`]


|===

